Created orders page; updated some page style; created routes.

--- a/order-app-front/src/app/app.component.html
+++ b/order-app-front/src/app/app.component.html
@@ -1,18 +1,1 @@
-<nav class="nav justify-content-center">
-  <a class="nav-link active" href="/">LAND ROVER</a>
-  <span>
-    <a href="">
-      <i class="fas fa-shopping-cart"></i>
-      Your cart
-    </a>
-  </span>
-</nav>
-<div class="container">
-  <div class="bgwrapper">
-    &nbsp;
-    <div class="order">
-      <span>RANGE ROVER EVOQUE</span>
-      <a href="">ORDER NOW</a>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
