Fininhed order history layout page

--- a/order-app-front/src/app/navbar/navbar.component.html
+++ b/order-app-front/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="nav justify-content-center">
   <a class="nav-link active" href="/">LAND ROVER</a>
   <span>
-    <a routerLink="/">
+    <a routerLink="/order-history">
       <i class="fas fa-history"></i>
       Order history
     </a>
