--- a/order-app-front/src/app/order/order.component.html
+++ b/order-app-front/src/app/order/order.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="make-order">
     <form>
-      <h1>Build your car</h1>
+      <h1>Make your order</h1>
       <ul>
         <h2>
           Products selected
