--- a/order-app-front/src/app/home/home.component.css
+++ b/order-app-front/src/app/home/home.component.css
@@ -15,7 +15,7 @@
   left: 16px;
   bottom: 16px;
   width: 360px;
-  height: 110px;
+  height: 120px;
   background: rgba(255, 255, 255, 0.6);
   opacity: 90%;
 }
@@ -28,6 +28,7 @@
 .order a {
   display: inline-block;
   padding: 8px;
+  margin-top: 6px;
   background: #0c121c;
   color: #e4e8e8;
   width: 55%;
