--- a/order-app-front/src/app/order/order.component.css
+++ b/order-app-front/src/app/order/order.component.css
@@ -75,6 +75,7 @@ h2 {
 .product a {
   display: inline-block;
   position: absolute;
+  text-align: center;
   bottom: 12px;
   left: 12px;
   padding: 8px;
