Integrated Angular with the Express rest api; created HttpClient methods to post and update data; created custom Angular pipes to filter and sort array data.

--- a/order-app-front/src/app/order-history/order-history.component.css
+++ b/order-app-front/src/app/order-history/order-history.component.css
@@ -37,6 +37,10 @@
   border: none;
 }
 
+.search-order input[type=search]:focus {
+  box-shadow: none;
+}
+
 .history-container ul:not(.status-history) {
   position: absolute;
   list-style: none;
@@ -84,3 +88,4 @@ strong {
   /*padding: 4px;*/
   /*color: #fff;*/
 }
+
