Corrected property of Order class: variable not defined.

--- a/order-app-front/src/app/order/order.component.css
+++ b/order-app-front/src/app/order/order.component.css
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  background: url("https://www.landrover.com/Images/GWS_L538_18MY_012_GLHD_TABLET_Device-Desktop_1600x900_281-346857_1600x900.jpg?v=17");
+  background: url("https://www.landrover.com/Images/GWS_L538_18MY_012_GLHD_TABLET_Device-Desktop_1600x900_281-346857_1600x900.jpg");
   bottom: 24px;
   top: 64px;
   left: 24px;
